<resources>
    <string name="app_name">Gestion du match</string>

    <string name="name_timer">temps</string>
    <string name="timer_point"> : </string>
    <string name="timer_minute">0</string>
    <string name="timer_seconde">0</string>
    <string name="name_visitor">visiteur</string>
    <string name="score_visitor">0</string>
    <string name="name_home">local</string>
    <string name="score_home">0</string>
    <string name="nom_joueur">Nom</string>
    <string name="punition_seconde_defaut">0</string>
    <string name="numero" />
    <string name="but" />
    <string name="buts" />
    <string name="equipe" />
    <string name="TAG_ID" />
    <string name="pause_global">Pause Global</string>
    <string name="one">1</string>
>>>>>>> e73d29d7c88f6d7e620ceeb474ceb8ddebdbdefc
</resources>
